# fleet-array

./: Array.hs  Bench.hs  DiffArray.hs  LICENSE  Quicksort.hs  QuicksortA.hs  README.md  diffarray.cabal  fleet-array.cabal
.github/workflows/: haskell-ci.yml
bench/: Array.hs  Bench.hs  Eratosthenes.hs  EratosthenesMA.hs  MutArr.hs  Quicksort.hs  QuicksortA.hs  QuicksortIM.hs  QuicksortMA.hs
examples/Example/Fleet/: Eratosthenes.hs  Quicksort.hs
examples/Example/MutArr/: Eratosthenes.hs  MutArr.hs  Quicksort.hs
src/Fleet/: Array.hs
src/Fleet/Array/: Lift.hs  MutArray.hs  MutVar.hs
