cabal-version:   3.12
name:            diffarray
version:         0.1.0.0
license:         NONE
author:          Jaro Reinders
maintainer:      jaro.reinders@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable diffarray
    import:           warnings
    main-is:          Bench.hs
    other-modules: Array, DiffArray, Quicksort
    build-depends:    base, tasty-bench
    hs-source-dirs:   .
    default-language: GHC2021
